--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,13 @@
 @import './common';
 // @import './example';
+
+//  Переменные, миксины, плейсхолдеры
+@import './utils/breakpoints';
+
+
+// Базовые стили
+@import './base/container';
+
+// Секции и блоки
+@import './layouts/films-collection';
+@import './layouts/collection-item';
