--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,45 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+
+// Плавный скролл
+
+html {
+    scroll-behavior: smooth;
+}
+
+
+// Убирает лишние отступы у картинок снизу + добавляет отзывчивость
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+// Убирает подчеркивание у всех ссылок
+
+a {
+    text-decoration: none;
+}
+
+// Обнуляет стиль списка (дубль в плейсхолдерах)
+
+li {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+// Обнуляет отступы у текста и элементов списка
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+li {
+    margin: 0;
+    padding: 0;
+}
