--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,13 +3,13 @@
         <nav class="site-nav">
             <a class="logo logo__header" href="./index.html">
                 <svg class="logo__header--icon" width="24px" height="24px">
-                    <use href=""></use>
+                    <use href="./images/sprite.svg#icon-film"></use>
                 </svg>
                 <span class="logo__black">Filmoteka</span>
             </a>
             <ul class="site-nav__list">
                 <li class="site-nav__item"><a class="site-nav__link site-nav__link--current" href="./index.html">Home</a></li>
-                <li class="site-nav__item"><a class="site-nav__link" href="">my library</a></li>
+                <li class="site-nav__item"><a class="site-nav__link" href="./my-library.html">my library</a></li>
             </ul>
         </nav>
         <input
@@ -21,61 +21,8 @@
         />
         <button class="btn search-form__btn" type="submit">
             <svg class="btn__header--icon" width="12px" height="12px">
-                <use href=""></use>
+                <use href="./images/sprite.svg#icon-search-icon"></use>
             </svg>
         </button>
     </div>
-        <!-- <div class="mobile-menu">
-            <a class="logo logo__mobile-menu" href="./index.html">Web<span class="logo__black">Studio</span></a>
-            <button type="button" class="open-menu-btn">
-                <svg width="40px" height="40px" aria-label="переключатель мобильного меню">
-                    <use class="icon-menu" href="imeges/icons.svg#menu-mob"></use>
-                </svg>
-            </button>
-            <div class="mob-menu is-hidden">
-                <button type="button" class="close-menu-btn">
-                    <svg width="40px" height="40px">
-                        <use class="icon-cross" href="imeges/icons.svg#close-mob"></use>
-                    </svg>
-                </button>
-                <ul class="mob-menu__list">
-                    <li class="mob-menu__item"><a class="mob-menu__link mob-menu__link--current" href="./index.html">Студия</a></li>
-                    <li class="mob-menu__item"><a class="mob-menu__link" href="./portfolio.html">Портфолио</a></li>
-                    <li class="mob-menu__item"><a class="mob-menu__link" href="">Контакты</a></li>
-                </ul>
-                <ul class="contact-mob">
-                    <li class="contact-mob__item">
-                        <a class="contact-mob__tel" href="tel:+380961111111">
-                            +38 096 111 11 11</a>
-                    </li>
-                    <li class="contact-mob__item">
-                        <a class="contact-mob__mail" href="mailto:info@devstudio.com">
-                            info@devstudio.com</a>
-                    </li>
-                    
-                </ul>
-                <ul class="mob-social">
-                    <li class="mob-social__item">
-                        <a class="mob-social__link" href="">
-                            Instagram
-                        </a>
-                    </li>
-                    <li class="mob-social__item">
-                        <a class="mob-social__link" href="">
-                            Twitter
-                        </a>
-                    </li>
-                    <li class="mob-social__item">
-                        <a class="mob-social__link" href="">
-                            Facebook
-                        </a>
-                    </li>
-                    <li class="mob-social__item">
-                        <a class="mob-social__link" href="">
-                            LinkedIn
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div> -->
 </header>
