--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
                 <svg class="logo__header--icon" width="24px" height="24px">
                     <use href="./images/sprite.svg#icon-film"></use>
                 </svg>
-                <span class="logo__black">Filmoteka</span>
+                <span class="logo__withe">Filmoteka</span>
             </a>
             <ul class="site-nav__list">
                 <li class="site-nav__item"><a class="site-nav__link site-nav__link--current" href="./index.html">Home</a></li>
