--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -14,10 +14,12 @@
           <li class="card__genre"><a href="" class="card__text">Fantasy,</a></li>
           <li class="card__genre"><a href="" class="card__text">Action,</a></li>
           <li class="card__genre"><a href="" class="card__text">Comedy</a></li>
-                  </ul>
-        <p class="card__year card__text">| 2022</p>
-        <p class="card__rating">6.31</p>
-              </div>
+        </ul>
+      <div class="card__data">
+          <p class="card__year card__text">| 2022</p>
+          <p class="card__rating">6.31</p>
+      </div>
+      </div>
     </div>
   </article>
 </li>
