--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,6 +5,7 @@
 @import './spinner';
 // Базовые стили
 @import './base/container';
+@import './base/base';
 // Секции и блоки
 @import './layouts/films-collection';
 @import './layouts/collection-item';
