--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -37,6 +37,12 @@ li {
     padding: 0;
 }
 
+.main__section {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
 .is-hidden {
     white-space: nowrap;
     width: 1px;
