--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -40,6 +40,12 @@ li {
     padding: 0;
 }
 
+.main__section {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
 .visually-hidden {
     white-space: nowrap;
     width: 1px;
