--- a/src/sass/_spinner.scss
+++ b/src/sass/_spinner.scss
@@ -20,7 +20,7 @@
     height: 120px;
     border-radius: 50%;
     display: inline-block;
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
     border: 14px solid;
