add background and css

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,5 +6,6 @@
 // Базовые стили
 @import './base/container';
 // Секции и блоки
+@import './layouts/header';
 @import './layouts/films-collection';
 @import './layouts/collection-item';
