--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,11 +12,13 @@
                 <li class="site-nav__item"><a class="site-nav__link" href="./my-library.html">my library</a></li>
             </ul>
         </nav>
-        <input class="search-form__input" type="text" name="searchQuery" autocomplete="off" placeholder="Movie search" />
+        <div class="search-form">
+            <input class="search-form__input" type="text" name="searchQuery" autocomplete="off" placeholder="Movie search" />
         <button class="btn search-form__btn" type="submit">
             <svg class="btn__header--icon" width="12px" height="12px">
                 <use href="./images/sprite.svg#icon-search-icon"></use>
             </svg>
         </button>
+        </div>
     </div>
 </header>
