--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,5 +6,6 @@
 // Базовые стили
 @import './base/container';
 @import './base/base';
+@import './layouts/header';
 // Секции и блоки
 @import './layouts/collection-item';
