--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,6 +3,7 @@
 @import './utils/breakpoints';
 //Loader (spinner) для асинхронних запитів
 @import './spinner';
+@import './header-myLibrary/librarry';
 // Базовые стили
 @import './base/container';
 // Секции и блоки
