--- a/src/partials/library.html
+++ b/src/partials/library.html
@@ -1,5 +1,5 @@
 
-<header class="header-library container1">
+<header class="header-library ">
 <div class="site-nav">
     <svg class="header-library__icon" width="24px" height="24px">
         <use href="./images/sprite.svg#icon-film"></use>
