--- a/src/sass/header-myLibrary/_librarry.scss
+++ b/src/sass/header-myLibrary/_librarry.scss
@@ -1,4 +1,7 @@
-.container1 {
+// .container1 {
+
+// }
+.header-library {
   margin-right: auto;
   margin-left: auto;
   padding-right: 20px;
@@ -6,36 +9,65 @@
   padding-top: 40px;
   padding-bottom: 62px;
 
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 320px) {
     padding-top: 40px;
     padding-bottom: 62px;
   }
-}
-.header-library {
-  background-image: url(../images/bg-1x-mob-library.jpg);
+  background: rgba(0, 0, 0, 0.56);
+  background-image: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.56),
+      rgba(0, 0, 0, 0.56)
+    ),
+    url(../images/bg-1x-mob-library.jpg);
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-    background-image: url(../images/bg-2x-mob-library.jpg);
+    background-image: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0.56),
+        rgba(0, 0, 0, 0.56)
+      ),
+      url(../images/bg-2x-mob-library.jpg);
   }
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  @media screen and (min-width: 480px) {
-    background-image: url(../images/bg-1x-tablet-library.jpg);
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0.56),
+        rgba(0, 0, 0, 0.56)
+      ),
+      url(../images/bg-1x-tablet-library.jpg);
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
-      background-image: url(../images/bg-2x-tablet-library.jpg);
+      background-image: linear-gradient(
+          to right,
+          rgba(0, 0, 0, 0.56),
+          rgba(0, 0, 0, 0.56)
+        ),
+        url(../images/bg-2x-tablet-library.jpg);
     }
   }
 
-  @media screen and (min-width: 768px) {
-    background-image: url(../images/bg-1x-desctop-library.jpg);
+  @media screen and (min-width: 1024px) {
+    background-image: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0.56),
+        rgba(0, 0, 0, 0.56)
+      ),
+      url(../images/bg-1x-desctop-library.jpg);
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
-      background-image: url(../images/bg-2x-desctop-library.jpg);
+      background-image: linear-gradient(
+          to right,
+          rgba(0, 0, 0, 0.56),
+          rgba(0, 0, 0, 0.56)
+        ),
+        url(../images/bg-2x-desctop-library.jpg);
     }
   }
 }
@@ -47,7 +79,7 @@
 .header-library__tittle {
   display: none;
   margin: 0;
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 768px) {
     margin-left: 10px;
     font-family: 'Roboto';
     font-style: normal;
@@ -56,8 +88,6 @@
     line-height: 1.17;
     color: #ffffff;
     display: flex;
-  }
-  @media screen and (min-width: 768px) {
   }
 }
 .header-library__link {
@@ -97,12 +127,13 @@
   border-radius: 5px;
   background-color: transparent;
   border-color: #fff;
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 768px) {
     margin-top: 40px;
     width: 152px;
     height: 44px;
+    margin-right: 32px;
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1024px) {
     width: 147px;
     height: 42px;
     margin-right: 20px;
@@ -119,12 +150,7 @@
   background-color: #ff6b01;
   border: none;
 }
-.header-library__logo {
-  @media screen and (min-width: 768px) {
-    width: 24px;
-    height: 22.85px;
-  }
-}
+
 .site-nav {
   display: flex;
   align-items: center;
@@ -133,9 +159,6 @@
   display: flex;
   margin-left: auto;
 }
-// .header-library__icon {
-
-//   @media screen and (min-width: 480px) {
-//     margin-right: 0;
-//   }
-// }
+// linear-gradient(to right,
+//             rgba(47, 48, 58, 0.4),
+//             rgba(47, 48, 58, 0.4)),
