fix stule breakpoits

--- a/src/sass/header-myLibrary/_librarry.scss
+++ b/src/sass/header-myLibrary/_librarry.scss
@@ -9,7 +9,7 @@
   padding-top: 40px;
   padding-bottom: 62px;
 
-  @media screen and (min-width: 320px) {
+  @media screen and (min-width: $mobile) {
     padding-top: 40px;
     padding-bottom: 62px;
   }
@@ -33,7 +33,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     background-image: linear-gradient(
         to right,
         rgba(0, 0, 0, 0.56),
@@ -52,7 +52,7 @@
     }
   }
 
-  @media screen and (min-width: 1024px) {
+  @media screen and (min-width: $desktop) {
     background-image: linear-gradient(
         to right,
         rgba(0, 0, 0, 0.56),
@@ -79,7 +79,7 @@
 .header-library__tittle {
   display: none;
   margin: 0;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     margin-left: 10px;
     font-family: 'Roboto';
     font-style: normal;
@@ -127,13 +127,13 @@
   border-radius: 5px;
   background-color: transparent;
   border-color: #fff;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     margin-top: 40px;
     width: 152px;
     height: 44px;
     margin-right: 32px;
   }
-  @media screen and (min-width: 1024px) {
+  @media screen and (min-width: $desktop) {
     width: 147px;
     height: 42px;
     margin-right: 20px;
@@ -159,6 +159,3 @@
   display: flex;
   margin-left: auto;
 }
-// linear-gradient(to right,
-//             rgba(47, 48, 58, 0.4),
-//             rgba(47, 48, 58, 0.4)),
