--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,6 +8,6 @@
 @import './base/container';
 @import './base/base';
 // Секции и блоки
-@import './layouts/films-collection';
+// @import './layouts/films-collection';
 @import './layouts/collection-item';
 
