--- a/src/partials/library.html
+++ b/src/partials/library.html
@@ -16,8 +16,8 @@
 
     
     <div class="header-library__btn-list">
-        <button class="header-library__btn" type="button">Watched</button>
-        <button class="header-library__btn" type="button">Queue</button>
+        <button class="header-library__btn watched" type="button">Watched</button>
+        <button class="header-library__btn queue" type="button">Queue</button>
     </div>
 
 
