--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,4 +10,4 @@
 // Секции и блоки
 // @import './layouts/films-collection';
 @import './layouts/collection-item';
-
+@import './layouts/modal-film';
