--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,12 +13,14 @@
             </ul>
         </nav>
         <div class="search-form">
-            <input class="search-form__input" type="text" name="searchQuery" autocomplete="off" placeholder="Movie search" />
-            <button class="btn search-form__btn" type="submit">
-            <svg class="btn__header--icon" width="12px" height="12px">
+            <form class="search-form" id="search-form">
+                <input class="search-form__input" type="text" name="searchQuery" autocomplete="off" placeholder="Movie search" />
+                <button class="btn search-form__btn" type="submit">
+                <svg class="btn__header--icon" width="12px" height="12px">
                 <use href="./images/sprite.svg#icon-search-icon"></use>
-            </svg>
-        </button>
+                </svg>
+                </button>
+            </form>
         </div>
         <p class="error-search is-hidden">
             Search result not successful. Enter the correct movie name and
