--- a/src/sass/_spinner.scss
+++ b/src/sass/_spinner.scss
@@ -1,33 +1,20 @@
-// .loader {
-//     border: 16px solid #f3f3f3;
-//     border-radius: 50%;
-//     border-top: 16px solid #FF6B08;
-//     border-bottom: 16px solid #000000;
-//     width: 120px;
-//     height: 120px;
-//     animation: spin 2s linear infinite;
-// }
-// @keyframes spin {
-//     0% {
-//         transform: rotate(0deg);
-//     }
-//     100% {
-//         transform: rotate(360deg);
-//     }
-// }
+.spinner{
+    position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%)
+}
+
 .loader {
     width: 120px;
     height: 120px;
     border-radius: 50%;
     display: inline-block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
     border: 14px solid;
     border-color: #000000 #000000 transparent;
     box-sizing: border-box;
     animation: rotation 1s linear infinite;
-}
+} 
 
 .loader::after {
     content: '';
