--- a/src/partials/library.html
+++ b/src/partials/library.html
@@ -1,9 +1,11 @@
 
-<header class="header-library ">
-<div class="site-nav">
-    <svg class="header-library__icon" width="24px" height="24px">
+<header class="header-library  ">
+<div class="nav-library">
+    <a class="nav-library__logo" href="./index.html">
+        <svg class="header-library__icon" width="24px" height="24px">
         <use href="./images/sprite.svg#icon-film"></use>
-    </svg>
+    </svg></a>
+    
         <h1 class="header-library__tittle">Filmoteka</h1>
 <ul class="header-library__list">
     <li><a class="header-library__link" href="./index.html">Home</a></li>
