--- a/src/sass/header-myLibrary/_librarry.scss
+++ b/src/sass/header-myLibrary/_librarry.scss
@@ -12,6 +12,7 @@
   @media screen and (min-width: $mobile) {
     padding-top: 40px;
     padding-bottom: 62px;
+    height: 230px;
   }
   background: rgba(0, 0, 0, 0.56);
   background-image: linear-gradient(
@@ -33,7 +34,9 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+
   @media screen and (min-width: $tablet) {
+    height: 216px;
     background-image: linear-gradient(
         to right,
         rgba(0, 0, 0, 0.56),
@@ -91,6 +94,7 @@
   }
 }
 .header-library__link {
+  position: relative;
   color: #fff;
   text-decoration: none;
   font-family: 'Roboto';
@@ -151,11 +155,14 @@
   border: none;
 }
 
-.site-nav {
+.nav-library {
   display: flex;
   align-items: center;
 }
 .header-library__list {
   display: flex;
   margin-left: auto;
+}
+.nav-library__logo {
+  display: flex;
 }
