--- a/src/sass/_spinner.scss
+++ b/src/sass/_spinner.scss
@@ -1,53 +1,53 @@
-.spinner{
-    position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%)
+.spinner {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .loader {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-    display: inline-block;
-    border: 14px solid;
-    border-color: #000000 #000000 transparent;
-    box-sizing: border-box;
-    animation: rotation 1s linear infinite;
-} 
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  display: inline-block;
+  border: 14px solid;
+  border-color: #000000 #000000 transparent;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
 
 .loader::after {
-    content: '';
-    box-sizing: border-box;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    border: 7px solid;
-    border-color: transparent #FF3D00 #FF3D00;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    animation: rotationBack 0.5s linear infinite;
-    transform-origin: center center;
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  border: 7px solid;
+  border-color: transparent #ff3d00 #ff3d00;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  animation: rotationBack 0.5s linear infinite;
+  transform-origin: center center;
 }
 
 @keyframes rotation {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes rotationBack {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(-360deg);
-    }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
+  }
 }
