--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -17,21 +17,12 @@
   gap: 20px;
   flex-wrap: wrap;
 
-  // @media screen and (min-width: $mobile) {
-  //     grid-column-gap: 20px;
-  //     grid-row-gap: 20px;
-  // }
-
   @media screen and (min-width: $tablet) {
     gap: 32px;
-    // grid-template-columns: repeat(2, auto);
-    // grid-column-gap: 32px;
-    // grid-row-gap: 71px;
   }
 
   @media screen and (min-width: $desktop) {
-    grid-template-columns: repeat(3, auto);
-    grid-column-gap: 16px;
-    grid-row-gap: 92px;
+    row-gap: 32px;
+    column-gap: 16px;
   }
 }
