--- a/src/partials/modal-film.html
+++ b/src/partials/modal-film.html
@@ -1,4 +1,4 @@
-<div class="backdrop is-hidden">
+<div class="backdrop-film is-hidden">
   <div class="modal-film">
     <button type="button" class="modal-film__close-btn">
       <svg class="modal-film__close-icon" width="14" height="14">
