--- a/src/sass/layouts/_modal-film.scss
+++ b/src/sass/layouts/_modal-film.scss
@@ -1,4 +1,4 @@
-.backdrop {
+.backdrop-film {
   position: fixed;
   top: 0;
   left: 0;
@@ -20,7 +20,7 @@
   top: 50%;
   left: 50%;
 
-  width: calc(100vw - 40px);
+  width: 280px;
   height: calc(100vh - 40px);
 
   padding: 48px 20px 40px 20px;
@@ -86,6 +86,9 @@
 .film__poster {
   position: relative;
 
+  display: flex;
+  justify-content: center;
+
   margin-bottom: 20px;
 
   border-radius: 5px;
@@ -104,12 +107,6 @@
     width: 375px;
     height: 478px;
   }
-}
-.film__img {
-  width: 100%;
-  height: 100%;
-  //   object-fit: cover;
-  object-fit: contain;
 }
 .film__info {
   @media screen and (min-width: $tablet) {
@@ -285,6 +282,7 @@
 //   height: 100px;
 //   scale: 1;
 //   transition: transform 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+//   cursor: pointer;
 // }
 // .film__play-img:hover {
 //   transform: scale(1.15);
