--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,16 +1,10 @@
-<<<<<<< Updated upstream
-<section class = "footer">
-    
-</section>
-=======
 <footer class="footer">
-    <p class = "footer__message">© 2022 | All Rights Reserved | Developed with 
-        <svg width="14px" height="12.88px">
-            <use href = "./images/sprite.svg#icon-heart"></use>
-        </svg> by GoIT Students,
-            <a href="" class = "footer__team">
-                Team 'IceScreamers'
-            </a>
-    </p>
+  <p class="footer__message">
+    © 2022 | All Rights Reserved | Developed with
+    <svg width="14px" height="12.88px">
+      <use href="./images/sprite.svg#icon-heart"></use>
+    </svg>
+    by GoIT Students,
+    <a href="" class="footer__team"> Team 'IceScreamers' </a>
+  </p>
 </footer>
->>>>>>> Stashed changes
