--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,22 +1,48 @@
 <header class="header">
-    <div class="container header__container">
-        <nav class="site-nav">
-            <a class="logo logo__header" href="./index.html">
-                <svg class="logo__header--icon" width="24px" height="24px">
-                    <use href="./images/sprite.svg#icon-film"></use>
-                </svg>
-                <span class="logo__withe">Filmoteka</span>
-            </a>
-            <ul class="site-nav__list">
-                <li class="site-nav__item"><a class="site-nav__link site-nav__link--current" href="./index.html">Home</a></li>
-                <li class="site-nav__item"><a class="site-nav__link" href="./my-library.html">my library</a></li>
-            </ul>
-        </nav>
-        <input class="search-form__input" type="text" name="searchQuery" autocomplete="off" placeholder="Movie search" />
-        <button class="btn search-form__btn" type="submit">
-            <svg class="btn__header--icon" width="12px" height="12px">
-                <use href="./images/sprite.svg#icon-search-icon"></use>
-            </svg>
-        </button>
-    </div>
+  <div class="container header__container">
+    <nav class="site-nav">
+      <a class="logo logo__header" href="./index.html">
+        <svg class="logo__header--icon" width="24px" height="24px">
+          <use href="./images/sprite.svg#icon-film"></use>
+        </svg>
+        <span class="logo__withe">Filmoteka</span>
+      </a>
+      <ul class="site-nav__list">
+        <li class="site-nav__item">
+          <a class="site-nav__link site-nav__link--current" href="./index.html"
+            >Home</a
+          >
+        </li>
+        <li class="site-nav__item">
+          <a class="site-nav__link" href="./my-library.html">my library</a>
+        </li>
+      </ul>
+    </nav>
+    <!-- авторизація -->
+    <ul class="auth__list">
+      <li class="auth__item">
+        <a href="#" class="auth__link modal-trigger" data-target="modal-login"
+          >Login</a
+        >
+      </li>
+      <li class="auth__item">
+        <a href="#" class="auth__link modal-trigger" data-target="modal-signup"
+          >Sign up</a
+        >
+      </li>
+    </ul>
+    <!-- ------------ -->
+    <input
+      class="search-form__input"
+      type="text"
+      name="searchQuery"
+      autocomplete="off"
+      placeholder="Movie search"
+    />
+    <button class="btn search-form__btn" type="submit">
+      <svg class="btn__header--icon" width="12px" height="12px">
+        <use href="./images/sprite.svg#icon-search-icon"></use>
+      </svg>
+    </button>
+  </div>
 </header>
