--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,29 +1,42 @@
 <header class="header">
-    <div class="container header__container">
-        <nav class="site-nav">
-            <a class="logo logo__header" href="./index.html">
-                <svg class="logo__header--icon" width="24px" height="24px">
-                    <use href="./images/sprite.svg#icon-film"></use>
-                </svg>
-                <span class="logo__Filmoteka">Filmoteka</span>
-            </a>
-            <ul class="site-nav__list">
-                <li class="site-nav__item"><a class="site-nav__link site-nav__link--current" href="./index.html">Home</a></li>
-                <li class="site-nav__item"><a class="site-nav__link" href="./my-library.html">my  library</a></li>
-            </ul>
-        </nav>
-        <div class="search-form">
-            <form class="search-form" id="search-form">
-                <input class="search-form__input" type="text" name="searchQuery" autocomplete="off" placeholder="Movie search" />
-                <button class="btn search-form__btn" type="submit">
-                <svg class="btn__header--icon" width="12px" height="12px">
-                <use href="./images/sprite.svg#icon-search-icon"></use>
-                </svg>
-                </button>
-            </form>
-        </div>
-        <p class="error-search is-hidden">
-            Search result not successful. Enter the correct movie name and
-        </p>
+  <div class="container header__container">
+    <nav class="site-nav">
+      <a class="logo logo__header" href="./index.html">
+        <svg class="logo__header--icon" width="24px" height="24px">
+          <use href="./images/sprite.svg#icon-film"></use>
+        </svg>
+        <span class="logo__Filmoteka">Filmoteka</span>
+      </a>
+      <ul class="site-nav__list">
+        <li class="site-nav__item">
+          <a class="site-nav__link site-nav__link--current" href="./index.html"
+            >Home</a
+          >
+        </li>
+        <li class="site-nav__item">
+          <a class="site-nav__link" href="./my-library.html">my library</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="search-form">
+      <form class="search-form" id="search-form">
+        <input
+          class="search-form__input"
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Movie search"
+        />
+        <button class="btn search-form__btn" type="submit">
+          <svg class="btn__header--icon" width="12px" height="12px">
+            <use href="./images/sprite.svg#icon-search-icon"></use>
+          </svg>
+        </button>
+      </form>
     </div>
+
+    <p class="error-search is-hidden">
+      Search result not successful. Enter the correct movie name and
+    </p>
+  </div>
 </header>
