--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,5 +1,5 @@
 <section class="main__section">
-  <div class="container__main--content">
+  <div class="container container__main--content">
     <ul class="container__main">
       <li class="card__item">
         <a class="card__link" id="429473" href="#">
