--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,97 +1,6 @@
 <section class="main__section">
   <div class="container container__main--content">
-    <ul class="container__main">
-      <li class="card__item">
-        <a class="card__link" id="429473" href="#">
-          <img
-            src="https://image.tmdb.org/t/p/w500/3ohgvtvkCbxAT5DA58fBcxFplWY.jpg"
-            alt="Лу"
-            class="card__poster"
-          />
-
-          <h2 class="card__title">Лу</h2>
-          <div class="card__wrap">
-            <p class="card__description">Комедія, Фентезі | 2022</p>
-            <p class="card__rating">6.3</p>
-          </div>
-        </a>
-      </li>
-      <li class="card__item">
-        <a class="card__link" id="429473" href="#">
-          <img
-            src="https://image.tmdb.org/t/p/w500/3ohgvtvkCbxAT5DA58fBcxFplWY.jpg"
-            alt="Лу"
-            class="card__poster"
-          />
-
-          <h2 class="card__title">Лу</h2>
-          <div class="card__wrap">
-            <p class="card__description">Комедія, Фентезі | 2022</p>
-            <p class="card__rating">6.3</p>
-          </div>
-        </a>
-      </li>
-      <li class="card__item">
-        <a class="card__link" id="429473" href="#">
-          <img
-            src="https://image.tmdb.org/t/p/w500/3ohgvtvkCbxAT5DA58fBcxFplWY.jpg"
-            alt="Лу"
-            class="card__poster"
-          />
-
-          <h2 class="card__title">Лу</h2>
-          <div class="card__wrap">
-            <p class="card__description">Комедія, Фентезі | 2022</p>
-            <p class="card__rating">6.3</p>
-          </div>
-        </a>
-      </li>
-      <li class="card__item">
-        <a class="card__link" id="429473" href="#">
-          <img
-            src="https://image.tmdb.org/t/p/w500/3ohgvtvkCbxAT5DA58fBcxFplWY.jpg"
-            alt="Лу"
-            class="card__poster"
-          />
-
-          <h2 class="card__title">Лу</h2>
-          <div class="card__wrap">
-            <p class="card__description">Комедія, Фентезі | 2022</p>
-            <p class="card__rating">6.3</p>
-          </div>
-        </a>
-      </li>
-      <li class="card__item">
-        <a class="card__link" id="429473" href="#">
-          <img
-            src="https://image.tmdb.org/t/p/w500/3ohgvtvkCbxAT5DA58fBcxFplWY.jpg"
-            alt="Лу"
-            class="card__poster"
-          />
-
-          <h2 class="card__title">Лу</h2>
-          <div class="card__wrap">
-            <p class="card__description">Комедія, Фентезі | 2022</p>
-            <p class="card__rating">6.3</p>
-          </div>
-        </a>
-      </li>
-      <li class="card__item">
-        <a class="card__link" id="429473" href="#">
-          <img
-            src="https://image.tmdb.org/t/p/w500/3ohgvtvkCbxAT5DA58fBcxFplWY.jpg"
-            alt="Лу"
-            class="card__poster"
-          />
-
-          <h2 class="card__title">Лу</h2>
-          <div class="card__wrap">
-            <p class="card__description">Комедія, Фентезі | 2022</p>
-            <p class="card__rating">6.3</p>
-          </div>
-        </a>
-      </li>
-    </ul>
+    <ul class="container__main"></ul>
     <div id="pagination" class="tui-pagination"></div>
   </div>
 </section>
