добавил стили на модалку

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,6 +5,6 @@
       <use href="./images/sprite.svg#icon-heart"></use>
     </svg>
     by GoIT Students,
-    <a href="" class="footer__team"> Team 'IceScreamers' </a>
+    <a href="" class="footer__team"> Team *Team Name* </a>
   </p>
 </footer>
