--- a/src/partials/modal-team.html
+++ b/src/partials/modal-team.html
@@ -6,40 +6,123 @@
               </svg>
         </button>
         <div class="team__container">
+          
+            <h2 class="team__name">Team *Team Name*</h2>
+            <p class="team__slogan">Know the LEGENDS by the face</p>
+          
             <div class="team__list">
             <ul class="team__list">
                 <li class="team__item">
                     <img 
-                    src="./images/modal-film-poster.jpg"
+                    src="./images/Aleksandr_Shabanov@2x.png"
                     alt=""
                     loading ="lazy"
                     class="team__img"
                     >
-                    <h3 class="team_name">Alexandr Shabanov</h3>
-                    <p class="team_role">Team Lead</p>
+                    <h3 class="team__name">Aleksandr Shabanov</h3>
+                    <p class="team__role">Team Lead</p>
                 </li>
 
                 <li class="team__item">
                     <img 
-                    src="./images/modal-film-poster.jpg"
+                    src="./images/Vitalii_Sidorenko@2x.png"
                     alt=""
                     loading ="lazy"
                     class="team__img"
                     >
-                    <h3 class="team_name">Vitaliy</h3>
-                    <p class="team_role">Scrum-master</p>
+                    <h3 class="team__name">Vitaliy Sidorenko</h3>
+                    <p class="team__role">Scrum-master</p>
                 </li>
 
                 <li class="team__item">
                     <img 
-                    src="./images/modal-film-poster.jpg"
+                    src="./images/Maxim_Dorogokuplya@2x.png"
                     alt=""
                     loading ="lazy"
                     class="team__img"
                     >
-                    <h3 class="team_name">Maxim Ostrovsky</h3>
-                    <p class="team_role">Footer, Modal</p>
+                    <h3 class="team__name">Maxim Dorogokuplya</h3>
+                    <p class="team__role">Footer, Modal</p>
                 </li>
+
+                  <li class="team__item">
+                    <img 
+                    src="./images/Vitaliy_Lyakh@2x.png"
+                    alt=""
+                    loading ="lazy"
+                    class="team__img"
+                    >
+                    <h3 class="team__name">Vitaliy Lyakh</h3>
+                    <p class="team__role">Footer, Modal</p>
+                </li>
+
+                  <li class="team__item">
+                    <img 
+                    src="./images/Maxim_Ostrovsky.png"
+                    alt=""
+                    loading ="lazy"
+                    class="team__img"
+                    >
+                    <h3 class="team__name">Maxim Ostrovsky</h3>
+                    <p class="team__role">Footer, Modal</p>
+                </li>
+
+                  <li class="team__item">
+                    <img 
+                    src="./images/Vitaliy_Lyakh@2x.png"
+                    alt=""
+                    loading ="lazy"
+                    class="team__img"
+                    >
+                    <h3 class="team__name">Aleksandr Demianenko</h3>
+                    <p class="team__role">Footer, Modal</p>
+                </li>
+
+                  <li class="team__item">
+                    <img 
+                    src="./images/Vitaliy_Lyakh@2x.png"
+                    alt=""
+                    loading ="lazy"
+                    class="team__img"
+                    >
+                    <h3 class="team__name">Nadiia Kotyk</h3>
+                    <p class="team__role">Footer, Modal</p>
+                </li>
+
+                  <li class="team__item">
+                    <img 
+                    src="./images/Vitaliy_Lyakh@2x.png"
+                    alt=""
+                    loading ="lazy"
+                    class="team__img"
+                    >
+                    <h3 class="team__name">Andriy Levchenko</h3>
+                    <p class="team__role">Footer, Modal</p>
+                </li>
+
+                  <li class="team__item">
+                    <img 
+                    src="./images/Vitaliy_Lyakh@2x.png"
+                    alt=""
+                    loading ="lazy"
+                    class="team__img"
+                    >
+                    <h3 class="team__name">Vadym Liubushkin</h3>
+                    <p class="team__role">Footer, Modal</p>
+                </li>
+
+                  <li class="team__item">
+                    <img 
+                    src="./images/Vitaliy_Lyakh@2x.png"
+                    alt=""
+                    loading ="lazy"
+                    class="team__img"
+                    >
+                    <h3 class="team__name">Dmitriy Soroka</h3>
+                    <p class="team__role">Footer, Modal</p>
+                </li>
+
+              
             </ul>
             </div>
         </div>
