--- a/src/sass/layouts/_modal-team.scss
+++ b/src/sass/layouts/_modal-team.scss
@@ -37,7 +37,7 @@
   }
 
   @media screen and (min-width: $desktop) {
-    width: 806px;
+    width: 1100px;
     min-height: 558px;
 
     padding: 40px 12px;
@@ -64,12 +64,24 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
-
+.team__name{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.team__slogan, .team__role {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  text-align: center;
+  color: gray;
+}
 .team__list {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 .team__img {
     width: 200px;
+    height: 214px;
     padding: 14px 5px 10px 5px;
+    border-radius: 100%;
 }
