--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -9,6 +9,7 @@
   }
 }
 .container__main--content {
+  min-height: 600px;
   @media screen and (min-width: $mobile) {
     padding-bottom: 40px;
     padding-top: 20px;
