--- a/src/sass/layouts/_modal-team.scss
+++ b/src/sass/layouts/_modal-team.scss
@@ -1,16 +1,16 @@
 .backdrop-team {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 
-    background-color: rgba(0, 0, 0, 0.25);
-    opacity: 1;
+  background-color: rgba(0, 0, 0, 0.25);
+  opacity: 1;
 
-    transition-property: opacity, visibility;
-    transition-duration: 250ms;
-    transition-timing-function: linear;
+  transition-property: opacity, visibility;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
 }
 .modal-team {
   position: absolute;
@@ -64,24 +64,27 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
-.team__name{
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+.team__name {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
   text-align: center;
   margin-bottom: 10px;
 }
-.team__slogan, .team__role {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+.team__slogan,
+.team__role {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
   text-align: center;
   color: gray;
 }
 .team__list {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 .team__img {
-    width: 200px;
-    height: 214px;
-    padding: 14px 5px 10px 5px;
-    border-radius: 100%;
+  width: 200px;
+  height: 214px;
+  padding: 14px 5px 10px 5px;
+  border-radius: 100%;
 }
