--- a/src/partials/modal-film.html
+++ b/src/partials/modal-film.html
@@ -63,10 +63,10 @@
         </div>
         <div class="film__btns">
           <!--class="film__btn--add film__btn--remove" -->
-          <button type="button" class="film__btn film__btn--add">
+          <button type="button" class="film__btn film__btn--add" data-addToWatched>
             add to watched
           </button>
-          <button type="button" class="film__btn film__btn--add">
+          <button type="button" class="film__btn film__btn--add" data-addToQueue>
             add to queue
           </button>
         </div>
