--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,6 +12,6 @@
 // @import './layouts/films-collection';
 @import './layouts/collection-item';
 @import './layouts/modal-film';
-// @import './layouts/modal-team';
-// @import './layouts/footer';
+@import './layouts/modal-team';
+@import './layouts/footer';
 @import './layouts/pagination';
