--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,17 +1,23 @@
 @import './common';
+
 //  Переменные, миксины, плейсхолдеры
 @import './utils/breakpoints';
+
 //Loader (spinner) для асинхронних запитів
 @import './spinner';
 @import './header-myLibrary/librarry';
+
 // Базовые стили
 @import './base/container';
 @import './base/base';
-@import './layouts/header';
+
 // Секции и блоки
+@import './layouts/header';
+@import './layouts/theme-switch';
+@import './layouts/theme';
+
 // @import './layouts/films-collection';
 @import './layouts/collection-item';
 @import './layouts/modal-film';
 @import './layouts/modal-team';
 @import './layouts/footer';
-
