--- a/src/sass/layouts/_modal-film.scss
+++ b/src/sass/layouts/_modal-film.scss
@@ -2,6 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 10;
+
   width: 100%;
   height: 100%;
 
@@ -59,7 +61,7 @@
     align-items: center;
 
     background-color: transparent;
-    border: 1px solid #fff;
+    border: 1px solid transparent;
     border-radius: 50%;
 
     transition-property: fill, border-color;
@@ -122,8 +124,6 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 1.15;
-
-  color: #000;
 }
 .film__description {
   margin-bottom: 20px;
