добавил открытие/закрытие модалки

--- a/src/partials/modal-team.html
+++ b/src/partials/modal-team.html
@@ -7,7 +7,7 @@
     </button>
     <div class="team__container">
       <h2 class="team__name">Team *Team Name*</h2>
-      <p class="team__slogan">Know the LEGENDS by the face</p>
+      <p class="team__slogan">You gotta know your LEGENDS by the face</p>
 
       <div class="team__list">
         <ul class="team__list">
@@ -30,7 +30,7 @@
               class="team__img"
             />
             <h3 class="team__name">Vitaliy Sidorenko</h3>
-            <p class="team__role">Scrum-master</p>
+            <p class="team__role">Scrum-master, My Library</p>
           </li>
 
           <li class="team__item">
@@ -63,7 +63,7 @@
               class="team__img"
             />
             <h3 class="team__name">Maxim Ostrovsky</h3>
-            <p class="team__role">Footer, Modal</p>
+            <p class="team__role">Footer, Modal, Prettier Master</p>
           </li>
 
           <li class="team__item">
@@ -101,13 +101,13 @@
 
           <li class="team__item">
             <img
-              src="./images/Vitaliy_Lyakh@2x.png"
+              src="./images/Vadym_Liubushkin.png"
               alt=""
               loading="lazy"
               class="team__img"
             />
             <h3 class="team__name">Vadym Liubushkin</h3>
-            <p class="team__role">Footer, Modal</p>
+            <p class="team__role">Header</p>
           </li>
 
           <li class="team__item">
