--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,4 +1,5 @@
 <section class="main__section">
+  <h2 class="visually-hidden">Filmoteka</h2>
   <div class="container container__main--content">
     <ul class="container__main"></ul>
     <div id="pagination" class="tui-pagination"></div>
