change style modal team

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,10 +1,10 @@
 <footer class="footer">
   <p class="footer__message">
     © 2022 | All Rights Reserved | Developed with
-    <svg width="14px" height="11px" >
-      <use href="./images/sprite.svg#icon-heart" class = "footer__icon"></use>
+    <svg width="14px" height="12px" class ="footer__icon">
+      <use href="./images/sprite.svg#icon-heart"></use>
     </svg>
     by GoIT Students,
-   <button type = 'button' class="footer__team">Team *Team Name*</button>
+    <a href="" class="footer__team">Team *Team Name*</a>
   </p>
 </footer>
