--- a/src/partials/modal-team.html
+++ b/src/partials/modal-team.html
@@ -79,13 +79,13 @@
 
           <li class="team__item">
             <img
-              src="./images/Vitaliy_Lyakh@2x.png"
+              src="./images/Nadiia_Kotyk.png"
               alt=""
               loading="lazy"
               class="team__img"
             />
             <h3 class="team__name">Nadiia Kotyk</h3>
-            <p class="team__role">Footer, Modal</p>
+            <p class="team__role">Search Form</p>
           </li>
 
           <li class="team__item">
