--- a/src/partials/library.html
+++ b/src/partials/library.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="header-library__btn-list">
-    <button class="header-library__btn" type="button">Watched</button>
-    <button class="header-library__btn" type="button">Queue</button>
+    <button class="header-library__btn" data-action="watched" type="button">Watched</button>
+    <button class="header-library__btn" data-action="queue" type="button">Queue</button>
   </div>
 </header>
