--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -2,6 +2,8 @@
   <h2 class="visually-hidden">Filmoteka</h2>
   <div class="container container__main--content">
     <ul class="container__main"></ul>
-    <div id="pagination" class="tui-pagination"></div>
+    <div class="pagination">
+      <ul></ul>
+    </div>
   </div>
 </section>
