fix modal, new styles

--- a/src/partials/modal-team.html
+++ b/src/partials/modal-team.html
@@ -1,6 +1,6 @@
 <div class="backdrop-team is-hidden">
   <div class="modal-team">
-    <button type="button" class="modal-team__close-btn">
+    <button type="button" class="modal-team__close-btn" data-action="team-close-modal">
       <svg class="modal-film__close-icon" width="14" height="14">
         <use href="./images/sprite.svg#icon-close"></use>
       </svg>
@@ -68,13 +68,13 @@
 
           <li class="team__item">
             <img
-              src="./images/Vitaliy_Lyakh@2x.png"
+              src="./images/Alexandr_Demianenko.png"
               alt=""
               loading="lazy"
               class="team__img"
             />
             <h3 class="team__name">Aleksandr Demianenko</h3>
-            <p class="team__role">Footer, Modal</p>
+            <p class="team__role">Pagination, Popular</p>
           </li>
 
           <li class="team__item">
@@ -90,13 +90,13 @@
 
           <li class="team__item">
             <img
-              src="./images/Vitaliy_Lyakh@2x.png"
+              src="./images/Andrey_Levchenko.png"
               alt=""
               loading="lazy"
               class="team__img"
             />
             <h3 class="team__name">Andriy Levchenko</h3>
-            <p class="team__role">Footer, Modal</p>
+            <p class="team__role">LocalStorage</p>
           </li>
 
           <li class="team__item">
@@ -119,6 +119,17 @@
             />
             <h3 class="team__name">Dmitriy Soroka</h3>
             <p class="team__role">Footer, Modal</p>
+          </li>
+
+          <li class="team__item">
+            <img
+              src="./images/Alexandr_Mitrofanov.png"
+              alt=""
+              loading="lazy"
+              class="team__img"
+            />
+            <h3 class="team__name">Aleksandr Mitrofanov</h3>
+            <p class="team__role">Film Conteiner, Modal Film</p>
           </li>
         </ul>
       </div>
