--- a/src/sass/layouts/_modal-team.scss
+++ b/src/sass/layouts/_modal-team.scss
@@ -4,6 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 10;
 
   background-color: rgba(0, 0, 0, 0.25);
   opacity: 1;
@@ -38,8 +39,8 @@
   }
 
   @media screen and (min-width: $desktop) {
-    width: 1100px;
-    min-height: 558px;
+    width: 1300px;
+    min-height: 500px;
 
     padding: 40px 12px;
   }
