--- a/src/partials/library.html
+++ b/src/partials/library.html
@@ -6,7 +6,7 @@
           <use href="./images/sprite.svg#icon-film"></use></svg
       ></a>
 
-      <h1 class="header-library__tittle">Filmoteka</h1>
+      <span class="header-library__tittle">Filmoteka</span>
       <ul class="header-library__list">
         <li><a class="header-library__link" href="./index.html">Home</a></li>
         <li>
