--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -22,4 +22,4 @@
 @import './layouts/modal-team';
 @import './layouts/footer';
 @import './layouts/pagination';
-
+@import './layouts/scroll-to-top';
