--- a/src/sass/layouts/_scroll-to-top.scss
+++ b/src/sass/layouts/_scroll-to-top.scss
@@ -13,14 +13,14 @@
   fill: #ff6b01;
 
   cursor: pointer;
-  visibility: hidden;
+  // visibility: hidden;
   border-radius: 50%;
   box-shadow: inset 0 0 0 3px rgb(255, 174, 0);
   opacity: 0;
-  transform: translateY(30px);
+  transform: translateY(130px);
 
   transition-property: fill, opacity, transform;
-  transition-duration: 250ms;
+  transition-duration: 500ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (min-width: $tablet) {
@@ -29,7 +29,7 @@
 
     width: 50px;
     height: 50px;
-    transform: translateY(30px);
+    transform: translateY(120px);
   }
 
   @media screen and (min-width: $desktop) {
@@ -38,7 +38,7 @@
 
     width: 60px;
     height: 60px;
-    transform: translateY(30px);
+    transform: translateY(100px);
   }
 }
 .scroll-up:hover,
@@ -65,7 +65,7 @@
   }
 }
 .scroll-up--active {
-  visibility: visible;
+  // visibility: visible;
   opacity: 1;
   transform: translateY(0);
 }
